# LUMIR

./: .gitignore  README.md  pyproject.toml
backbone/: abstract_model.py  neural_model.py
backbone/eval/: evaluation.py
backbone/eval/metrics/: __init__.py  catalog_coverage.py  gini.py  hitrate.py  metric.py  mrr.py  ndcg.py  novelty.py  serendipity.py
backbone/grurec/: grurec.py  grurec_model.py  grurec_with_embeddings.py
backbone/transformer/: transformer.py  transformer_model.py
backbone/transformer/bert/: bert.py  bert_model.py  bert_with_embeddings.py
backbone/transformer/bert/custom_generators/: test_generator.py  train_generator.py
backbone/transformer/custom_layers/: embedding_layer.py  transformer_encoder_layer.py
backbone/transformer/sasrec/: sasrec.py  sasrec_model.py  sasrec_with_embeddings.py
backbone/utils/: side_encoder.py  top_k_computer.py
backbone/utils/neural_utils/custom_activations/: gelu.py  (+1 more)
baseline/: baseline_experiment_tuning_all.py
configs/: representation_config.yaml
evaluation/: baseline_experiment_modality.py
preprocessing/: preparation_dataset.py
representation/: align_loss.py  attention_fusion.py  attention_fusion_tuning.py  comm_fusion.py  concatenation.py  dataset.py  dataset_analyse.py  encoder.py  encoder_ling.py  gz_analyse.py  intrinsic_eval.py  loss.py  modality_loss.py  pt_analyse.py  test.py  train_representation.py  train_representation_CoMM.py  train_representation_tuning.py  train_representation_tuning_CoMM.py  utils.py  utils_embedding.py  weighted_concatenation.py  weighted_concatenation_tuning.py
(+9 files in other folders)
